WIP - Special jar-signing for Java 11.