@@ -71,6 +71,13 @@ sourceSets {
             srcDirs files('src/main/kotlin', generatedSourceDir).builtBy(generateSource)
         }
     }
+
+    java9 {
+        java {
+            srcDirs += files('src/main/java9')
+        }
+        compileClasspath += main.compileClasspath
+    }
 }
 
 dependencies {
@@ -83,11 +90,37 @@ dependencies {
     implementation "biz.aQute.bnd:biz.aQute.bnd.gradle:$bnd_version"
     implementation "biz.aQute.bnd:biz.aQute.bndlib:$bnd_version"
 
+    java9Implementation files(sourceSets.main.output) {
+        builtBy tasks.named('compileKotlin', org.jetbrains.kotlin.gradle.tasks.KotlinCompile)
+    }
+
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_jupiter_version"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junit_jupiter_version"
     testImplementation "org.assertj:assertj-core:$assertj_version"
+}
+
+tasks.named('compileJava9Java', JavaCompile) {
+    javaCompiler = javaToolchains.compilerFor {
+        languageVersion = of(11)
+    }
+    options.release = 9
+    options.compilerArgs += [
+        '--add-modules', 'jdk.jartool'
+    ]
+}
+
+tasks.named('jar', Jar) {
+    from(sourceSets.java9.output) { CopySpec spec ->
+        spec.into 'META-INF/versions/9'
+    }
+
+    manifest {
+        attributes('Automatic-Module-Name': 'net.corda.plugins.cpk')
+        attributes('Multi-Release': true)
+        attributes('Sealed': true)
+    }
 }
 
 processTestResources {
